--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
         <section>
             <h4>30-Second Video</h4>
             <video controls>
-                <source src="video7382577192.mp4" type="video/mp4">
+                <source src="HTML Video.mp4" type="video/mp4">
             </video>
         </section>
 
         <section>
             <h4>Audio Recording</h4>
-            <audio controls src="HTML Recording.mp3" type="audio/mpeg"></audio>
+            <audio controls src="HTML Recording.mp3"></audio>
         </section>
 
         <h3 id="summary">Summary</h3>
